ex-3.6-v1.5/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: hovhanneshovakimyan/k8sproject:ex-3.5-v1.4-backend-multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: hovhanneshovakimyan/k8sproject:ex-3.5-v1.4-frontend-multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: todo-frontend-cache-pvc
